turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:20: error: not found: value etat
	state = rule(etat)(couleurActuelle)
                     ^